@@ -15,12 +15,16 @@ wrap cell content when nooverlap and notruncate are set.
 Pending
 -------
 Rethink LUA evaluation
-handle content alignment over multiple lines in cmds.c:pad_and_align
-handle rowformat when exporting markdown and export plain!
 BUG: undo/redo of ir/dr ic/dc does not change hidden_rows/hidden_cols properly.
 
+handle mouse clicks in edition mode.
+Restore comments from old SC?
+handle rowformat when exporting markdown and export plain !
+handle content alignment over multiple lines in cmds.c:pad_and_align
+C-y misbehave sometimes?
 
 
+--
 Thanks to all that helped and created PR.
 Thanks to all who support and use this program.
 
